# DEAP_CLS

./: .gitignore  Makefile  README.md  pyproject.toml
docker/: Dockerfile
workspace/: AutoAugment-GA.py  custom_operation.py  model.py  train_cifer10.py  train_mnist.py  train_numpy.py
