[tool.poetry]
name = "pytorch-deap-cls"
version = "0.1.0"
description = "An example repository for developing python in GPU and CPU environment"
authors = ["Akira Terauchi <akira090602@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
pandas = "^0.25.3"
scipy = "^1.3"
Cython = "^0.29.14"
pycocotools = "^2.0"
matplotlib = "^3.1"
tensorboardX = "^1.9"
pillow = "^6.2"
tqdm = "^4.38"
opencv-python = "=4.1.0.25"
tensorboard = "=1.14.0"
future = "^0.18.2"
sklearn = "^0.0.0"
scikit-image = "^0.16.2"
natsort = "^7.0.0"
deap = "^1.3.1"
catalyst = "^20.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.7"
flake8-import-order = "^0.18.1"
pep8-naming = "^0.8.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
